helm-webapp/helmapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myhelmapp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: myhelmapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myhelmapp
                port:
                  number: 80
